--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -59,7 +59,8 @@
             android:id="@+id/txtBox_alcohol_price"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/txtBox_alcohol_price" />
+            android:hint="@string/txtBox_alcohol_price"
+            android:inputType="numberDecimal" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -79,7 +80,8 @@
             android:id="@+id/txtBox_gasoline_price"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/txtBox_gasoline_price" />
+            android:hint="@string/txtBox_gasoline_price"
+            android:inputType="numberDecimal" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
@@ -91,6 +93,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
+        android:onClick="calculatePrice"
         android:text="@string/btn_calculate"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
